before change sed  's/\AA/\,\textrm{\AA}/' *.tex

--- a/thesis/Classes/CUEDthesisPSnPDF.cls
+++ b/thesis/Classes/CUEDthesisPSnPDF.cls
@@ -47,6 +47,7 @@
 \usepackage[square, sort, numbers, authoryear]{natbib}
 \usepackage{ifthen}
 \usepackage{ifpdf}
+\usepackage{microtype}
 % Astar-Jarda
 %\usepackage{natbib}
 \usepackage{listings} 
