--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -5,12 +5,10 @@
 \begin{acknowledgements}      %this creates the heading for the acknowledgments
 
 
-  I would like to thank Filip Hroch and Petr Škoda for their
+  I would like to thank Filip Hroch and Petr \v{S}koda for their
   remarkable support and patience not only during this project. I
   greatly appreciated comments and help from following friends: Tereza
-  Jeřábková, Josef Pacula, Petr Šafařík, a vsem tem ubozakum co je to
-  donutim precist;-) 
-
+  Je\v{r}\'{a}bkov\'{a}, Josef Pacula and Petr \v{S}afa\v{r}\'{i}k.
 
   \bigskip 
   Funding for the SDSS and SDSS-II has been provided by the
@@ -45,6 +43,10 @@
 
   This research has made use of The WEKA Data Mining Software
   \citep{hall2009weka}.
+
+  \bigskip
+
+  This research has made use of Free software \citep{GPL}.
 
 
 
