--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -39,16 +39,16 @@ There are two important trends in current astronomy surveys:
 \begin{itemize}
 
   \item{Size:} The cumulative compressed data holdings of the ESO archive will
-    reach 1 PetaByte by 2012 \cite{hanisch2010international}. Projects
+    reach 1 PetaByte by 2012 \citep{hanisch2010international}. Projects
     like Large Synoptic Survey Telescope (LSST) will produce about 30
     TB per night, leading to a total database over the ten years of
-    operations of 60 PB for the raw data \cite{becla2006designing}.
+    operations of 60 PB for the raw data \citep{becla2006designing}.
    
   \item{Complexity:} Modern surveys will cover the sky in different
     wave-bands, from gamma- and X-rays, optical, infrared to
     radio. The ability to cross correlate these observations together
     may lead to new understanding of physical
-    phenomenas. \cite{hanisch2010international}
+    phenomenas. \citep{hanisch2010international}
 \end{itemize}
 
 
@@ -170,7 +170,7 @@ described in terms of who curates or maintains it and which can be
 given a name and a unique identifier. Just about anything can be a
 resource: it can be an abstract idea, such as sky coverage or an
 instrumental setup, or it can be fairly concrete, like an organization
-or a data collection. \cite{bensonivoa}
+or a data collection. \citep{bensonivoa}
 
 UML\footnote{Unified Modeling Language. Standardized general-purpose
   modeling language in the field of object-oriented software
@@ -231,7 +231,7 @@ actual resource. The listing is abbreviated.
 %     it and which can be given a name and a unique Resource Identifier.
 %     A resource can be of various types: a data or metadata collection,
 %     a computing or storage element, an application, a data and
-%     metadata access service, etc. \cite{gray2007}
+%     metadata access service, etc. \citep{gray2007}
     
 
 %     \begin{figure}[!htbp]
@@ -312,7 +312,7 @@ parametrers are requied others are optional.
 
 Cone Search is implemented in many software packages. Besides standard
 VO tools like TOPCAT or STILTS also in MUNIPACK and many others.
-Following example shows simple query to SIMBAD \cite{wenger2000simbad}
+Following example shows simple query to SIMBAD \citep{wenger2000simbad}
 catalog using method \emph{urlopen} of Python library \emph{urllib2}.
  
 \begin{lstlisting}
@@ -538,14 +538,14 @@ Following example shows transformation FITS into VOTable.
 "An archival format must be utterly portable and self-describing, on
 the assumption that, apart from the transcription device, neither the
 software nor the hardware that wrote the data will be available when
-the data are read." \cite{nrc1995}}
+the data are read." \citep{nrc1995}}
 
 
 \bigskip
 
 FITS (Flexible Image Transport System) was originally created for data
 exchange between WSRT \footnote{Westerbork Synthesis Radio Telescope}
-and the VLA \footnote{Very Large Array} \cite{fits1997}. It is now
+and the VLA \footnote{Very Large Array} \citep{fits1997}. It is now
 used as a file format to store, transmit, and manipulate scientific
 data and it is (thanks to it's revolutionary design) de facto standard
 in astronomy.
@@ -685,13 +685,13 @@ on "user friendly" GUI applications.
 %% \nomenclature[s0]{$0$}{subscript index}                                                        % first letter S is for subscripts
 
 %% \section{Second Paragraph}
-%% and here I write more ...\cite{texbook}
+%% and here I write more ...\citep{texbook}
 
 %% \subsection{sub first paragraph}
 %% ... and some more ...
 
-%% Now I would like to cite the following: \cite{latex} and \cite{texbook}
-%% and \cite{Rud73}.
+%% Now I would like to cite the following: \citep{latex} and \cite{texbook}
+%% and \citep{Rud73}.
 
 %% I would also like to include a picture ...
 
