--- a/thesis/chapter2.tex
+++ b/thesis/chapter2.tex
@@ -29,7 +29,7 @@ astronomers with interesting methods for data analysis and computer
 scientist with large ammout of quality data.
 
 \section{Supervised Methods}
-These methods are also known as predictive\cite{ball2010data}. They
+These methods are also known as predictive\citep{ball2010data}. They
 rely on training set with known target property. This set must be
 representative. The selected method is trained on that set and the
 result is then used on data for which the target property is not
@@ -56,7 +56,7 @@ those classifications. The main advantages of DT are:
 \end{itemize}
 
 In pseudo-code, the general algorithm for building decision trees is
-\cite{kotsiantis2007supervised}:
+\citep{kotsiantis2007supervised}:
 \begin{enumerate}
 \item Check for base cases
 \item For each attribute a
@@ -98,7 +98,7 @@ The data is divided into fixed number of partitions and each in turn
 is used for testing and the reminder is used for training. Finally,
 the number of partitions error estimates are averaged to yield an
 overall error. The standard is to used 10-fold cross-validation. This
-number is a result of tests on numerous data sets \cite{witten2005data}
+number is a result of tests on numerous data sets \citep{witten2005data}
 
 \subsubsection{Example: Classifying Galaxies Stars and QSO}
 There is an example of classifying Galaxies Stars and QSO based on
