--- a/thesis/chapter3.tex
+++ b/thesis/chapter3.tex
@@ -32,7 +32,7 @@ or had at some time, one or more Balmer lines in emission. The current
 accepted explanation of this phenomena is circumstellar gaseous
 component in the form of equatorial disk. Rapidly rotating central
 star is important feature of these objects, which may be important
-contributor of the circumstellar medium \cite{porter2003classical}.
+contributor of the circumstellar medium \citep{porter2003classical}.
 
 The important characteristic used later in the work is the H$\alpha$
 emission. The explanation of its origin is on following pictures.
@@ -51,7 +51,7 @@ emission. The explanation of its origin is on following pictures.
           absorption spectrum. Central B star emits UV (Lyman
           continuum) and ionizes the disk, which in turn re-emits at
           high wavelength such as visible
-          domain. \cite{hirata1984star}}
+          domain. \citep{hirata1984star}}
         \label{Figjhk_be_b}
       \end{center}
     \end{figure}
@@ -66,7 +66,7 @@ emission. The explanation of its origin is on following pictures.
         \includegraphics[bb = 92 86 545 742, height=6in]{beStarLine2}
         \fi
         \caption{Example of spectra of Be stars based on view angle
-          \cite{slettebak1988stars}}
+          \citep{slettebak1988stars}}
         \label{Figjhk_be_b}
       \end{center}
     \end{figure}
@@ -120,14 +120,14 @@ to gain the disproportion between photometric and spectral data will
 probably increase in the future as well. The distinction between Be
 and other types of stars also should be theoretically possible since
 the Be stars exhibits infrared excess correlated to the H$\alpha$
-emission \cite{van1995halpha}.
+emission \citep{van1995halpha}.
 
 \subsection{Data preprocessing}
 
 I was provided with a list of confirmed Be stars from Academy of Science
 Ondřejov. This list consist of 625 manually chosen objects. Data were
-correlated with Hipparcos \cite{perryman1997hipparcos} catalog to
-obtain RA, DEC and then with 2MASS\cite{2006AJ131.1163S} catalog to
+correlated with Hipparcos \citep{perryman1997hipparcos} catalog to
+obtain RA, DEC and then with 2MASS\citep{2006AJ131.1163S} catalog to
 obtain J,H,K Colors using method of multi-cone search in Virtual
 Observatory. The second set was acquired from Hipparcos catalog using
 following SQL query:
@@ -456,7 +456,7 @@ sum of squares.
   S & = \frac{\operatorname{mad}(x_i - x_0)}{\sum{w_i}}.
 \end{align}
 
-\cite{launer1979robustness}
+\citep{launer1979robustness}
 
 Part of the script implementing fitting the Gaussian function
 
@@ -913,7 +913,7 @@ considered but not implemented subjects are discussed here.
   features. There is an interesting and effective algorithm discussed
   in the paper: Advanced fit technique for astrophysical spectra by
   S. Bukvi{\'c} et. al. from University of Belgrade
-  \cite{bukvic2008advanced} which seems ideal for this purpose.
+  \citep{bukvic2008advanced} which seems ideal for this purpose.
 
 \item More Data Mining algorithms
 
