--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -34,7 +34,7 @@ just few examples of new tools available to scientists.
     \else
     \includegraphics[bb = 92 86 545 742, height=6in]{astroinformatics.png}
     \fi
-    \caption{Astroinformatics in the context of astronomy \cite{ballastroinformatics} }
+    \caption{Astroinformatics in the context of astronomy \citep{ballastroinformatics} }
     \label{FigAir}
   \end{center}
 \end{figure}
@@ -47,7 +47,7 @@ sciences are also in the vanguard of the data intensive science. This
 is great opportunity for interdisciplinary collaboration.
 
 This work deals with the problem of semi-automatic procedures for
-finding Be stars \cite{porter2003classical} candidates in the
+finding Be stars \citep{porter2003classical} candidates in the
 astronomy surveys. More than straight forward process it's trail and
 error approach probing new possibilities with rather interesting than
 useful results.
