--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -200,5 +200,14 @@
   publisher={ACM}
 }
 
+@misc{GPL,
+  title = {{GNU General Public License}},
+  author = "{Free Software Foundation}",
+  howpublished = {\\ URL: \urlsmall{http://www.gnu.org/copyleft/gpl.html}},
+  url = {http://www.gnu.org/copyleft/gpl.html}
+  year = {2007},
+}
+
+
 
 % ------------------------------------------------------------------------
